button-shadows fixed, vertical gradient fixed, subtext fixed, font-weight for couriers fixed

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     </a>
     <div class="container">
         <nav class="navigation">
-            <a href="#" class="navigation__link">
+            <a href="#header" class="navigation__link">
                 Главная
             </a>
-            <a href="#" class="navigation__link">
+            <a href="#solutions" class="navigation__link">
                 О нас
             </a>
-            <a href="#" class="navigation__link">
+            <a href="#partners" class="navigation__link">
                 Партнерам
             </a>
-            <a href="#" class="navigation__link">
+            <a href="#couriers" class="navigation__link">
                 Курьерам
             </a>
             <div class="user" id="user">
@@ -47,22 +47,22 @@
                     <img src="./assets/close-navbar.svg" alt="закрыть навигацию" class="navigation__cross">
                 </button>
                 <div class="blue-text-gradient-background navigation__link-wrapper">
-                    <a href="#" class="navigation__link blue-text">
+                    <a href="#header" class="navigation__link blue-text">
                         Главная
                     </a>
                 </div>
                 <div class="blue-text-gradient-background navigation__link-wrapper">
-                    <a href="#" class="navigation__link blue-text">
+                    <a href="#solutions" class="navigation__link blue-text">
                         О нас
                     </a>
                 </div>
                 <div class="blue-text-gradient-background navigation__link-wrapper">
-                    <a href="#" class="navigation__link blue-text">
+                    <a href="#partners" class="navigation__link blue-text">
                         Партнерам
                     </a>
                 </div>
                 <div class="blue-text-gradient-background navigation__link-wrapper">
-                    <a href="#" class="navigation__link blue-text">
+                    <a href="#couriers" class="navigation__link blue-text">
                         Курьерам
                     </a>
                 </div>
@@ -116,7 +116,7 @@
             <img src="./assets/logo-pizza.svg" alt="Логотип партнёра TopPizza" class="partners__logo">
         </div>
     </div>
-    <div class="container solutions">
+    <div class="container solutions" id="solutions">
         <div class="blue-text-gradient-background">
             <h2 class="blue-text solutions__header h1">
                 Современные решения
@@ -135,8 +135,8 @@
                             </h6>
                         </div>
                         <ul class="solution-card__info p solution-card__list">
-                            <li class="solution-card__list-item">Квалифицированные курьеры в спецодежде и с высоким рейтингом</li>
-                            <li class="solution-card__list-item">На автомобиле, пеший, велосипед или самокат</li>
+                            <li class="solution-card__list-item">Квалифицированные курьеры&nbspв спецодежде и с высоким рейтингом</li>
+                            <li class="solution-card__list-item">На автомобиле, пеший, велосипед&nbspили самокат</li>
                             <li class="solution-card__list-item">Наличие термрсумок.</li>
                             <li class="solution-card__list-item">Доступная цена от 95 р.</li>
                             <li class="solution-card__list-item">Быстрая доставка в течении 30 минут.</li>
@@ -157,7 +157,7 @@
                         </div>
                         <ul class="solution-card__info p solution-card__list">
                             <li class="solution-card__list-item">Избавим от затрат на содержание собственной службы
-                                доставки с экономией за счет нашего сервиса от 15 000 р. в месяц.</li>
+                                доставки&nbspс экономией за счет нашего сервиса&nbspот 15 000 р. в месяц.</li>
                             <li class="solution-card__list-item">Расходы на содержание банковских терминалов
                                 (процент по эквайрингу) оставляем за собой. </li>
                         </ul>
@@ -217,7 +217,7 @@
             </div>
         </div>
     </div>
-    <div class="profit">
+    <div class="profit" id="partners">
         <div class="profit__header-container container">
             <div class="blue-text-gradient-background">
                 <h2 class="blue-text profit__header h1">Почему с нами выгодно?</h2>
@@ -233,9 +233,11 @@
                     расходов, связанных с содержанием службы доставки.</li>
                 <li class="profit__list-item profit__list-item_header h5">Быстрое передвижение</li>
                 <li class="profit__list-item p">Отказавшись от собственной службы доставки и перейдя в наш сервис, Вы
-                    сэкономите от 15 000 р. в месяц (доказано расчетным путем)</li>
+                    сэкономите от 15 000 р. в месяц
+                    <div class="p_s">(доказано расчетным путем)</div>
+                </li>
                 <li class="profit__list-item profit__list-item_header h5">Много курьеров</li>
-                <li class="profit__list-item p">Курьеры как пешие, на велосипеде или самокате, так
+                <li class="profit__list-item p">Курьеры как пешие, на&nbspвелосипеде или самокате, так
                     и на автомобиле.</li>
             </ul>
             <div class="gradient-border-wrapper form__wrapper form__wrapper_profit">
@@ -377,7 +379,7 @@
             <img src="./assets/scale.svg" alt="Шкала пунктов списка" class="stages__scale">
         </div>
     </div>
-    <div class="couriers">
+    <div class="couriers" id="couriers">
         <div class="couriers__container container">
             <div class="couriers__info">
                 <h2 class="h1 couriers__header">Курьерам</h2>
