--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
                             </h6>
                         </div>
                         <ul class="solution-card__info p solution-card__list">
-                            <li class="solution-card__list-item">Квалифицированные курьеры&nbspв спецодежде и с высоким рейтингом</li>
-                            <li class="solution-card__list-item">На автомобиле, пеший, велосипед&nbspили самокат</li>
+                            <li class="solution-card__list-item">Квалифицированные курьеры в&nbspспецодежде и с высоким рейтингом</li>
+                            <li class="solution-card__list-item">На автомобиле, пеший, велосипед или&nbspсамокат</li>
                             <li class="solution-card__list-item">Наличие термрсумок.</li>
                             <li class="solution-card__list-item">Доступная цена от 95 р.</li>
-                            <li class="solution-card__list-item">Быстрая доставка в течении 30 минут.</li>
+                            <li class="solution-card__list-item">Быстрая доставка в течение 30 минут.</li>
                         </ul>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                         </div>
                         <ul class="solution-card__info p solution-card__list">
                             <li class="solution-card__list-item">Избавим от затрат на содержание собственной службы
-                                доставки&nbspс экономией за счет нашего сервиса&nbspот 15 000 р. в месяц.</li>
+                                доставки с&nbspэкономией за счет нашего сервиса от&nbsp15 000 р. в месяц.</li>
                             <li class="solution-card__list-item">Расходы на содержание банковских терминалов
                                 (процент по эквайрингу) оставляем за собой. </li>
                         </ul>
@@ -193,7 +193,7 @@
                             </h6>
                         </div>
                         <p class="solution-card__info p">
-                            Отслеживайте нахождение курьера на карте в режиме реального времени
+                            Отслеживайте нахождение курьера на&nbspкарте в режиме реального времени
                         </p>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
                             </h6>
                         </div>
                         <p class="solution-card__info p">
-                            Несем полную ответственность за целостность и сохранность вашего заказа
+                            Несем полную ответственность за&nbspцелостность и сохранность Вашего&nbspзаказа
                         </p>
                     </div>
                 </div>
@@ -226,19 +226,17 @@
         <div class="profit__container container">
             <ul class="profit__list">
                 <li class="profit__list-item profit__list-item_header h5">Меньше стресса</li>
-                <li class="profit__list-item p">Вы избавляете себя от поиска персонала, текучести кадров и всех
-                    расходов, связанных с содержанием службы доставки.</li>
+                <li class="profit__list-item p">Вы избавляете себя от поиска персонала,&nbspтекучести кадров и&nbspвсех&nbspрасходов, связанных с содержанием службы доставки.</li>
                 <li class="profit__list-item profit__list-item_header h5">Больше выгоды</li>
-                <li class="profit__list-item p">Вы избавляете себя от поиска персонала, текучести кадров и всех
-                    расходов, связанных с содержанием службы доставки.</li>
+                <li class="profit__list-item p">Вы избавляете себя от поиска персонала,&nbspтекучести кадров и&nbspвсех&nbspрасходов, связанных с содержанием службы доставки.</li>
                 <li class="profit__list-item profit__list-item_header h5">Быстрое передвижение</li>
                 <li class="profit__list-item p">Отказавшись от собственной службы доставки и перейдя в наш сервис, Вы
                     сэкономите от 15 000 р. в месяц
                     <div class="p_s">(доказано расчетным путем)</div>
                 </li>
                 <li class="profit__list-item profit__list-item_header h5">Много курьеров</li>
-                <li class="profit__list-item p">Курьеры как пешие, на&nbspвелосипеде или самокате, так
-                    и на автомобиле.</li>
+                <li class="profit__list-item p">Курьеры как пешие, на&nbspвелосипеде&nbspили&nbspсамокате,
+                    так&nbspи&nbspна&nbspавтомобиле.</li>
             </ul>
             <div class="gradient-border-wrapper form__wrapper form__wrapper_profit">
                 <form class="profit__form form form_profit" id="client_form">
