changed gradient borders to one color borders

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <ul class="solution-card__info p solution-card__list">
                             <li class="solution-card__list-item">Квалифицированные курьеры в&nbspспецодежде и с высоким рейтингом</li>
                             <li class="solution-card__list-item">На автомобиле, пеший, велосипед или&nbspсамокат</li>
-                            <li class="solution-card__list-item">Наличие термрсумок.</li>
+                            <li class="solution-card__list-item">Наличие термосумок.</li>
                             <li class="solution-card__list-item">Доступная цена от 95 р.</li>
                             <li class="solution-card__list-item">Быстрая доставка в течение 30 минут.</li>
                         </ul>
