--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             Оставьте заявку
                         </h4>
                         <p class="form__subtext blue-text">
-                            наши специалисты свяжутся с Вами в ближайшее время
+                            наши специалисты свяжутся с&nbspВами в&nbspближайшее&nbspвремя
                         </p>
                     </div>
                     <fieldset class="form__fieldset">
@@ -291,7 +291,7 @@
                             <h6 class="stage-item__title h5 blue-text">Оставьте заявку</h6>
                         </div>
                         <p class="stage-item__description p">
-                            Менеджер нашей компании свяжется с Вами
+                            Менеджер нашей компании свяжется&nbspс&nbspВами
                         </p>
                     </div>
                 </div>
@@ -375,7 +375,7 @@
                     <div class="howto__text">
                         <h6 class="howto__title h5">Оставьте заявку</h6>
                         <p class="howto__description p">
-                            Менеджер нашей компании свяжется с Вами
+                            Менеджер нашей компании свяжется&nbspс&nbspВами
                         </p>
                     </div>
 
@@ -451,7 +451,7 @@
         <div class="couriers__container couriers__container_advantages advantages container">
             <h3 class="advantages__header h2">Что вы получите?</h3>
             <ul class="advantages__list">
-                <li class="advantages__list-item">Заработок с нашим сервисом от 1500 р в день</li>
+                <li class="advantages__list-item">Заработок с нашим сервисом от&nbsp1500&nbspр в&nbspдень</li>
                 <li class="advantages__list-item">Удобный график</li>
                 <li class="advantages__list-item">Премии за высокий рейтинг</li>
             </ul>
