--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
         </div>
     </div>
 </main>
-<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
 <script src="./main.js"></script>
 </body>
 </html>
