--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
                                     placeholder="Имя"
                                     id="client-name"
                                     class="form__input"
+                                    pattern="^(\s)*[А-Яа-я]+((\s)?((\'|\-|\.)?([А-Яа-я])+))*(\s)*$"
                                     required>
                         </div>
                         <div class="form__input-wrapper">
@@ -271,7 +272,7 @@
                                     placeholder="mail@mail.ru"
                                     id="client-mail"
                                     class="form__input"
-                                    pattern="[@]+"
+                                    pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$"
                                     required>
                         </div>
                         <div class="form__input-wrapper">
@@ -437,6 +438,7 @@
                                     placeholder="Имя"
                                     id="courier-name"
                                     class="form__input"
+                                    pattern="^(\s)*[А-Яа-я]+((\s)?((\'|\-|\.)?([А-Яа-я])+))*(\s)*$"
                                     required>
                         </div>
                         <div class="form__input-wrapper">
@@ -462,7 +464,7 @@
                                     placeholder="mail@mail.ru"
                                     id="courier-mail"
                                     class="form__input"
-                                    pattern="[@]+"
+                                    pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$"
                                     required>
                         </div>
                         <div class="form__input-wrapper">
