--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
                 <li class="profit__list-item profit__list-item_header h5">Меньше стресса</li>
                 <li class="profit__list-item p">Вы избавляете себя от поиска персонала,&nbspтекучести кадров и&nbspвсех&nbspрасходов, связанных с содержанием службы доставки.</li>
                 <li class="profit__list-item profit__list-item_header h5">Больше выгоды</li>
-                <li class="profit__list-item p">Вы избавляете себя от поиска персонала,&nbspтекучести кадров и&nbspвсех&nbspрасходов, связанных с содержанием службы доставки.</li>
-                <li class="profit__list-item profit__list-item_header h5">Быстрое передвижение</li>
                 <li class="profit__list-item p">Отказавшись от собственной службы доставки и перейдя в наш сервис, Вы
                     сэкономите от 15 000 р. в месяц
-                    <div class="p_s">(доказано расчетным путем)</div>
+                    <div class="p_s">(доказано расчетным путем)</div></li>
+                <li class="profit__list-item profit__list-item_header h5">Быстрое передвижение</li>
+                <li class="profit__list-item p">Штат курьеров нашей компании достаточно велик для своевременной доставки вашего заказа
                 </li>
                 <li class="profit__list-item profit__list-item_header h5">Много курьеров</li>
                 <li class="profit__list-item p">Курьеры как пешие, на&nbspвелосипеде&nbspили&nbspсамокате,
