dot + grad text

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     сэкономите от 15 000 р. в месяц
                     <div class="p_s">(доказано расчетным путем)</div></li>
                 <li class="profit__list-item profit__list-item_header h5">Быстрое передвижение</li>
-                <li class="profit__list-item p">Штат курьеров нашей компании достаточно велик для своевременной доставки вашего заказа
+                <li class="profit__list-item p">Штат курьеров нашей компании достаточно велик для своевременной доставки вашего заказа.
                 </li>
                 <li class="profit__list-item profit__list-item_header h5">Много курьеров</li>
                 <li class="profit__list-item p">Курьеры как пешие, на&nbspвелосипеде&nbspили&nbspсамокате,
