--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                             </h6>
                         </div>
                         <ul class="solution-card__info p solution-card__list">
-                            <li class="solution-card__list-item">Квалифицированные курьеры в&nbspспецодежде и с высоким рейтингом</li>
-                            <li class="solution-card__list-item">На автомобиле, пеший, велосипед или&nbspсамокат</li>
+                            <li class="solution-card__list-item">Квалифицированные курьеры в&nbspспецодежде и с высоким рейтингом.</li>
+                            <li class="solution-card__list-item">На автомобиле, пеший, велосипед или&nbspсамокат.</li>
                             <li class="solution-card__list-item">Наличие термосумок.</li>
                             <li class="solution-card__list-item">Доступная цена от 95 р.</li>
                             <li class="solution-card__list-item">Быстрая доставка в течение 30 минут.</li>
