--- a/index.html
+++ b/index.html
@@ -150,12 +150,10 @@
                                 Экономия
                             </h6>
                         </div>
-                        <ul class="solution-card__info p solution-card__list">
-                            <li class="solution-card__list-item">Избавим от затрат на содержание собственной службы
-                                доставки с&nbspэкономией за счет нашего сервиса от&nbsp15 000 р. в месяц.</li>
-                            <li class="solution-card__list-item">Расходы на содержание банковских терминалов
-                                (процент по эквайрингу) оставляем за собой. </li>
-                        </ul>
+                        <p class="solution-card__info p">
+                            Избавим от затрат на содержание собственной службы
+                            доставки с&nbspэкономией за счет нашего сервиса от&nbsp15 000 р. в месяц.
+                        </p>
                     </div>
                 </div>
             <div class="solutions__card solution-card">
@@ -165,7 +163,7 @@
                     <div class="solution-card__text">
                         <div class="blue-text-gradient-background">
                             <h6 class="blue-text solution-card__header h5">
-                                Экономия
+                                Удобство
                             </h6>
                         </div>
                         <p class="solution-card__info p">
@@ -412,7 +410,7 @@
                     <div class="howto__text">
                         <h6 class="howto__title h5">Начните зарабатывать</h6>
                         <p class="howto__description p">
-                            Со всеми партнерами мы заключаем договор сотрудничества
+                            Раз в день мы формируем отчет по количеству доставленных заказов, а после производим расчет
                         </p>
                     </div>
                 </div>
